[css-grid] Constrain by min-height on auto-repeat computation

The max-height (if definite) is used to compute the number of auto repeat
rows whenever the height is indefinite. We were using the min-height only in
case both values were indefinite.

However, it's reasonable to assume that the min-height trumps the used value
of height/max-height like it always does, per CSS 2.2. Note that the number
of rows still needs to fit within that size even if using min-height,
because we're just using min-height to compute the used value of the height
property. If both height and max-height are indefinite we keep doing the
same, i.e., compute the minimum number of rows that fulfill min-height (if
definite).

BUG=648814

Review-Url: https://codereview.chromium.org/2421593002
Cr-Commit-Position: refs/heads/master@{#425327}

Former-commit-id: 8f030c73af4b8b82752c373cc98ef60a7e87a780